--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Rest Countries</h1>
+    <h1 class="heading">Rest Countries</h1>
     <div id="countries" class="countries">
-
+        
     </div>
     
 
